# DTLSv1p3-AI-PQC

./: .clang-format  .gitignore  BUILD_SYSTEM_README.md  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  COMPREHENSIVE_COVERAGE_REPORT.md  CONTRIBUTING.md  CPackConfig.cmake  CPackSourceConfig.cmake  DTLS_v1.3_Implementation_Workflow.md  DTLS_v1.3_PRD.md  DTLS_v1.3_System_Design.md  DTLSv13Config.cmake  Doxyfile  LICENSE  MEMORY_OPTIMIZATION_REPORT.md  Makefile  QA_ANALYSIS_REPORT.md  QA_ENGINEERING_ASSESSMENT.md  README.md  RELEASE_NOTES.md  TASKS.md  build.sh  check-build-dir.sh  crypto_performance_validation_final_report.md  crypto_provider_test  crypto_provider_test.cpp  crypto_provider_test_suite  crypto_provider_test_suite.cpp  log  provider_selection_test.cpp  test.sh  test_cookie_fix.cpp  test_handshake_compile.cpp  test_provider_selection.cpp  test_rate_limiter_simple.cpp  test_record_integration.cpp  test_security_simple.cpp  verify_pure_mlkem.cpp
docs/: Doxyfile  (+18 more)
examples/: CMakeLists.txt  Makefile  ack_integration_test.cpp  ack_message_example.cpp  ack_state_machine_example.cpp  dtls_client_example  dtls_client_example.cpp  dtls_connection_migration_example  dtls_connection_migration_example.cpp  dtls_early_data_example  dtls_early_data_example.cpp  dtls_multi_connection_server_example  dtls_multi_connection_server_example.cpp  dtls_server_example  dtls_server_example.cpp  early_data_example.cpp  error_handling_example.cpp  examples_README.md  simple_ack_state_test.cpp  transport_example  transport_example.cpp
src/: CMakeLists.txt  Makefile  libdtlsv13.so.1
src/compatibility/: compatibility_utils.cpp  dtls12_compat.cpp
src/connection/: advanced_connection_manager.cpp  connection.cpp
src/core/: alert_manager.cpp  error.cpp  error_context.cpp  error_handler.cpp  error_reporter.cpp  result.cpp  types.cpp
src/core_protocol/: anti_replay_core.cpp  systemc_timing_adapter.cpp
src/crypto/: advanced_cipher_suites.cpp  botan_pqc_signatures.cpp  botan_provider.cpp  crypto_system.cpp  crypto_utils.cpp  hardware_accelerated_provider.cpp  hardware_acceleration.cpp  hardware_zero_copy.cpp  openssl_pqc_signatures.cpp  openssl_provider.cpp  operations_impl.cpp  provider_factory.cpp
src/memory/: adaptive_pools.cpp  buffer.cpp  connection_pools.cpp  dos_protection.cpp  leak_detection.cpp  memory_optimization_tests.cpp  memory_system.cpp  memory_utils.cpp  pool.cpp  smart_recycling.cpp  zero_copy_crypto.cpp
src/monitoring/: metrics_system.cpp
src/protocol/: cookie.cpp  dtls_records.cpp  early_data.cpp  fragment_reassembler.cpp  handshake.cpp  handshake_manager.cpp  hardware_accelerated_record_layer.cpp  message_layer.cpp  protocol.cpp  record.cpp  record_layer.cpp  record_layer_crypto_abstraction.cpp  record_layer_factory.cpp  version_manager.cpp
src/security/: CMakeLists.txt  README.md  dos_protection.cpp  rate_limiter.cpp  resource_manager.cpp
src/transport/: udp_transport.cpp
systemc/: CMakeLists.txt  README.md
systemc/cmake/: DTLSSystemCTLMConfig.cmake.in  dtls_systemc_tlm.pc.in
systemc/docs/: Doxyfile.in
systemc/examples/: CMakeLists.txt
systemc/include/: crypto_provider_tlm.h  dtls_channels.h  dtls_error_handling.h  dtls_protocol_modules.h  dtls_protocol_stack.h  dtls_systemc_types.h  dtls_testbench.h  dtls_timing_models.h  dtls_tlm_extensions.h  message_layer_tlm.h  record_layer_tlm.h
systemc/src/: crypto_provider_tlm.cpp  dtls_channels.cpp  dtls_protocol_modules.cpp  dtls_protocol_stack.cpp  dtls_systemc_utils.cpp  dtls_testbench.cpp  dtls_timing_models.cpp  message_layer_tlm.cpp  record_layer_tlm.cpp
systemc/tests/: basic_crypto_test.cpp  co_simulation_test.cpp  dmi_hardware_acceleration_test.cpp  dtls_cid_test.cpp  dtls_cid_test_standalone.cpp  dtls_system_test.cpp  dtls_tlm_extension_comprehensive_test.cpp  functional_validation_test.cpp  hardware_codesign_validation_test.cpp  integration_test.cpp  message_layer_test.cpp  performance_test.cpp  protocol_stack_component_test.cpp  quantum_keeper_temporal_test.cpp  record_layer_test.cpp  security_test.cpp  systemc_integration_comprehensive_test.cpp  systemc_test_framework.h  timing_accuracy_validation_test.cpp  timing_validation_test.cpp  tlm_interface_compliance_test.cpp
tests/: CMakeLists.txt  HYBRID_PQC_REGRESSION_INTEGRATION.md  HYBRID_PQC_TEST_SUITE_README.md  ML_KEM_TESTS_README.md  ML_KEM_TEST_INTEGRATION_SUMMARY.md  Makefile  README.md  coverage_enhancement_test.cpp  coverage_test.cpp  coverage_test_comprehensive.cpp  error_handling_test.cpp  rfc9147_compliance_test.cpp  simple_coverage_test.cpp  validate_hybrid_pqc_regression_integration.sh
tests/connection/: test_connection_cleanup.cpp  test_error_recovery.cpp  test_state_transitions.cpp
tests/core/: test_alert_manager.cpp  test_error.cpp  test_result.cpp  test_types.cpp
tests/core_protocol/: test_anti_replay_core.cpp
tests/crypto/: test_advanced_cipher_suites_comprehensive.cpp  test_advanced_cipher_suites_simple.cpp  test_aead_operations.cpp  test_botan_provider_direct.cpp  test_botan_signature_operations.cpp  test_botan_signature_operations.cpp.disabled  test_cross_provider_comprehensive.cpp  test_crypto_coverage_comprehensive.cpp  test_crypto_dependency_reduction.cpp  test_crypto_edge_cases.cpp  test_crypto_operations_abstraction.cpp  test_crypto_operations_comprehensive.cpp  test_crypto_provider_comprehensive.cpp  test_crypto_security_validation.cpp  test_crypto_security_vectors.cpp  test_crypto_system_comprehensive.cpp  test_crypto_system_enhanced.cpp  test_crypto_utils_enhanced.cpp  test_enhanced_crypto_providers.cpp  test_enhanced_crypto_providers_broken.cpp  test_enhanced_crypto_providers_old.cpp  test_enhanced_crypto_providers_old2.cpp  test_hardware_acceleration.cpp  test_hardware_acceleration_comprehensive.cpp  test_hardware_acceleration_enhanced.cpp  test_hardware_provider_and_zero_copy_comprehensive.cpp  test_hkdf_expand_label.cpp  test_hybrid_pqc_compliance.cpp  test_hybrid_pqc_key_exchange.cpp  test_hybrid_pqc_mlkem_operations.cpp  test_hybrid_pqc_test_vectors.cpp  test_mac_validation.cpp  test_mlkem_comprehensive.cpp  (+11 more)
(+5017 files in other folders)
